refactor: Controller Dto가 Repository까지 연관되지 않도록 수정