@@ -1,7 +1,6 @@
 package roomescape.controller;
 
 import java.util.List;
-import java.util.stream.Collectors;
 import org.springframework.web.bind.annotation.DeleteMapping;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PathVariable;
@@ -11,9 +10,8 @@ import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 import roomescape.controller.dto.ReservationTimeCreateRequestDto;
 import roomescape.controller.dto.ReservationTimeResponseDto;
+import roomescape.domain.ReservationTime;
 import roomescape.service.ReservationTimeService;
-import roomescape.service.dto.ReservationTimeCreateDto;
-import roomescape.service.dto.ReservationTimeDto;
 
 @RestController
 @RequestMapping("/times")
@@ -26,20 +24,18 @@ public class ReservationTimeController {
 
     @PostMapping
     public ReservationTimeResponseDto create(@RequestBody ReservationTimeCreateRequestDto dto) {
-        ReservationTimeCreateDto serviceDto = ReservationTimeCreateDto.toDto(dto);
+        ReservationTime found = reservationTimeService.save(dto);
 
-        ReservationTimeDto reservationTime = reservationTimeService.save(serviceDto);
-
-        return ReservationTimeResponseDto.toDto(reservationTime);
+        return ReservationTimeResponseDto.toDto(found);
     }
 
     @GetMapping
     public List<ReservationTimeResponseDto> findAll() {
-        List<ReservationTimeDto> found = reservationTimeService.findAll();
+        List<ReservationTime> reservationTimes = reservationTimeService.findAll();
 
-        return found.stream()
+        return reservationTimes.stream()
                 .map(ReservationTimeResponseDto::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @DeleteMapping("/{id}")
